--- a/Neurox.Web/Views/Shared/_Layout.cshtml
+++ b/Neurox.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Neurox.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @RenderSection("headerScripts", required: false)
 </head>
 <body>
     <header>
